# psychological-operations

./: .gitattributes  .gitignore  Cargo.toml  README.md  X_DEVELOPER_AGREEMENT.md  X_OAUTH.md  X_TOS.md  X_TOS_COMPLIANT_FOR_YOU_READING.md  add_back.txt  build-and-test.sh  build-cli.sh  build-viewer.sh  build.sh  clear-cache.sh  create_team.html  install-bin.sh  install.sh  objectiveai-version.sh  objectiveai.json  test-cleanup.sh  test-integration.sh  test-prepare-build.sh  test-prepare-objectiveai.sh  test-prepare.sh  test-unit.sh  test.sh  version.sh
psychological-operations-browser-sdk/: Cargo.toml
psychological-operations-browser-sdk/src/: auth_json.rs  console.rs  cookies.rs  credentials.rs  lib.rs  mode.rs  output.rs  panel.rs  refresh_token.rs  request.rs  response.rs  stdio.rs  x_app_credentials.rs
psychological-operations-browser-sdk/src/stdio/: request.rs
psychological-operations-browser/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
psychological-operations-browser/src-tauri/capabilities/: default.json
psychological-operations-browser/src-tauri/permissions/: current-mode.toml  current-panel.toml  current-signed-in.toml  current-user-id.toml  frontend-ready.toml  process-post-create-html.toml  report-url.toml  set-production-app-count.toml  stdio-respond.toml  store-x-app-credential.toml
psychological-operations-browser/src-tauri/src/: agent_read.rs  args.rs  authorize.rs  cef.rs  cef_scheme.rs  cef_v8.rs  cookies_watcher.rs  credentials.rs  deliver.rs  discord_login.rs  lib.rs  main.rs  oauth_popup.rs  post_create_dialog.rs  psyop_authorize.rs  psyop_read.rs  signin_watcher.rs  state.rs  stdin_io.rs  stdio.rs  twitch_app.rs  twitch_authorize.rs  webview.rs
psychological-operations-chrome/crx-pack/: Cargo.toml
psychological-operations-cli/: Cargo.toml  build.rs  install.sh
psychological-operations-cli/assets/: .gitattributes
psychological-operations-cli/assets/agents_enqueue_and_notify/: stdout_notify.txt
psychological-operations-cli/assets/agents_notify_direct/: stdout_notify.txt
psychological-operations-cli/assets/harness_smoke/: stdout.txt
psychological-operations-cli/assets/psyops_list_multiple_psyops/: stdout.txt
psychological-operations-cli/assets/psyops_run_multi_stage/: stdout.txt
psychological-operations-cli/assets/psyops_run_one_of_multiple/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_query_fallback/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_for_you_queue/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_logprobs_swarm/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_pre_hydrated_posts/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_pre_queued_deliveries/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_stdout_target/: stdout.txt
psychological-operations-cli/assets/psyops_run_with_vector_logprobs_swarm/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_x_target/: stdout.txt
psychological-operations-cli/assets/targets_deliver_agent_queue/: stdout.txt
psychological-operations-cli/assets/targets_deliver_drains_queue/: stdout.txt
psychological-operations-cli/examples/: build_test_seed.rs
psychological-operations-cli/src/: config.rs  context.rs  db.rs  emit.rs  error.rs  events.rs  input.rs  lib.rs  login.rs  main.rs  oauth_setup.rs  objectiveai_executor.rs  output.rs  persona_browser.rs  psyop.rs  run.rs  score.rs  tweet.rs  x_app_setup.rs
psychological-operations-cli/src/agent/: intervention.rs
psychological-operations-cli/src/agents/: mod.rs
psychological-operations-cli/src/billing/: config.rs  setup.rs
psychological-operations-cli/src/browser/: bundle.rs  extract.rs  launch.rs  mod.rs  stream.rs
psychological-operations-cli/src/chrome/: bundles.rs  extract.rs  launch.rs  mod.rs  native_host.rs  paths.rs
psychological-operations-cli/tests/: agents_enqueue_and_notify.rs  agents_notify_direct.rs  psyops_list_multiple_psyops.rs  psyops_run_one_of_multiple.rs  psyops_run_query_fallback.rs  psyops_run_with_for_you_queue.rs  psyops_run_with_logprobs_swarm.rs  psyops_run_with_pre_hydrated_posts.rs  psyops_run_with_pre_queued_deliveries.rs  psyops_run_with_vector_logprobs_swarm.rs  targets_deliver_agent_queue.rs  targets_deliver_drains_queue.rs
psychological-operations-daemon/: Cargo.toml
psychological-operations-daemon/src/: lib.rs
psychological-operations-db/: Cargo.toml
psychological-operations-db/src/: actions.rs  auth.rs  cache.rs  config.rs  cookies.rs  delivered.rs  discord.rs  discord_hooks.rs  discord_queue.rs  engagement.rs  lib.rs  locker.rs  posts.rs  psyops.rs  queue.rs  quota.rs  reload.rs  reply_queue.rs  request_log.rs  retry.rs  schema.sql  twitch.rs  twitch_hooks.rs  twitch_queue.rs  x_app.rs  x_queue.rs
psychological-operations-sdk/: Cargo.toml
psychological-operations-sdk/src/: browser.rs  lib.rs  x_api_mcp_sessions.rs
psychological-operations-sdk/tests/: auth_lock_two_tier.rs  cache_two_tier.rs  media_polymorphism.rs
psychological-operations-tests/: Cargo.toml
psychological-operations-tests/src/: lib.rs
psychological-operations-tests/tests/: agents_quota_set_get.rs  full_loop_agent_handles_queue.rs  full_loop_agent_queue.rs  harness_smoke.rs  hello_world.rs  psyops_list_multiple_psyops.rs  psyops_publish_and_list.rs  psyops_run_multi_stage.rs  psyops_run_one_of_multiple.rs  psyops_run_via_queries.rs  psyops_run_with_logprobs_swarm.rs  psyops_run_with_stdout_target.rs  psyops_run_with_vector_logprobs_swarm.rs  psyops_run_with_x_target.rs
psychological-operations-x-api/: Cargo.toml
psychological-operations-x-api-mcp/: Cargo.toml  build.sh  fingerprint.sh  validate.sh
psychological-operations-x-api-mcp/src/: header_session_manager.rs  lib.rs  main.rs  run.rs  x_api.rs
psychological-operations-x-api/src/: lib.rs
psychological-operations-x-mcp/: Cargo.toml
psychological-operations-x-mcp/src/: header_session_manager.rs  lib.rs  main.rs  mode.rs
(+1231 files in other folders)
