[workspace]
resolver = "3"
members = [
    "psychological-operations-browser/src-tauri",
    "psychological-operations-db",
    "psychological-operations-sdk",
    "psychological-operations-cli",
    "psychological-operations-x-api-mcp",
    "psychological-operations-tests",
]

# Build-tool versions consumed by build.sh's provisioning (mirrors
# objectiveai's build-bin.sh / [workspace.metadata.tools] pattern). ninja
# is needed by cef-dll-sys: the browser crate's CEF C++ wrapper builds via
# CMake's Ninja generator.
[workspace.metadata.tools]
ninja = "1.13.1"
# cargo-nextest runs the integration suite (test.sh). Installed into ./bin
# via `cargo install --root` — same source objectiveai's build-bin.sh uses.
cargo-nextest = "0.9.137"
