[workspace]
resolver = "3"
members = [
    "psychological-operations-browser/src-tauri",
    "psychological-operations-db",
    "psychological-operations-sdk",
    "psychological-operations-cli",
    "psychological-operations-x-mcp",
    "psychological-operations-daemon",
    "psychological-operations-tests",
]

# Build-tool versions consumed by install-bin.sh (mirrors objectiveai's
# build-bin.sh / [workspace.metadata.tools] pattern). ninja is needed by
# cef-dll-sys: the browser crate's CEF C++ wrapper builds via CMake's
# Ninja generator.
[workspace.metadata.tools]
ninja = "1.13.1"
