[package]
name = "psychological-operations-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "psychological-operations"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
reqwest = { version = "0.13.2", features = ["json", "query"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
objectiveai-sdk = "2.2.3"
indexmap = "2.14.0"
futures = "0.3.32"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2.1.3"
url = { version = "2", features = ["serde"] }
serde_path_to_error = "0.1.20"
starlark = "0.13.0"
rand = "0.8"
base64 = "0.22"
envconfig = "0.11.1"
humantime = "2"
psychological-operations-db = { path = "../psychological-operations-db" }
psychological-operations-sdk = { path = "../psychological-operations-sdk" }
psychological-operations-x-api-mcp = { path = "../psychological-operations-x-api-mcp" }
schemars = "1.2.1"

[dev-dependencies]
# Blocking download of the objectiveai release binary in the test
# harness (see tests/common/mod.rs::objectiveai_binary). Runtime deps
# above pull reqwest with async features; the blocking flavor is
# test-only. rustls-tls avoids dragging openssl-sys on Windows CI.
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
# Integration tests JSON-encode plugin args for `plugins run --args`
# and build expectation values; they also open the SDK queue
# (queue.sqlite) directly to assert delivered rows, which needs a
# tokio runtime. All three are already in the main dependency graph
# — dev-deps just make them visible to tests/.
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
psychological-operations-sdk = { path = "../psychological-operations-sdk" }
