[package]
name = "psychological-operations-sdk"
version = "0.1.0"
edition = "2021"
description = "Shared wire-types + helpers + X API v2 client across the psychological-operations system."

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_path_to_error = "0.1.20"
thiserror = "2.0.18"
reqwest = { version = "0.13.2", features = ["json", "query"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2.1.3"
rand = "0.8"
sha2 = "0.10"
# Cookies module — read the on-disk CEF cookies SQLite directly so
# external consumers (CLI, future get_auth_data wrapper) can ask
# "who's signed in?" without going through the running browser.
# `bundled` ships SQLite C source inside rusqlite — no system dep.
#
# Pinned to 0.31 to match psychological-operations-cli — Cargo's
# `links = "sqlite3"` constraint allows only one libsqlite3-sys
# version in the dependency graph. Bump both crates together when
# the CLI moves.
rusqlite = { version = "0.31.0", features = ["bundled"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
# `full` features brought along when x-api folded in — the OAuth
# callback server (`x::oauth::server`) needs `net` + `io-util` +
# `macros`, plus we keep the original `fs` + `rt` for the browser
# auth_json + cookies modules.
tokio = { version = "1.52.3", features = ["full"] }
fs4 = { version = "1.1.0", features = ["tokio"] }
scraper = "0.27.0"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
# Pinned to 0.4.39 to match objectiveai-sdk's exact pin (transitive
# via psychological-operations-cli). Cargo can't unify a >0.4.39
# range against `=0.4.39`, so bumping requires a coordinated bump
# in objectiveai-sdk first.
chrono = { version = "0.4.39", default-features = false, features = ["serde", "clock", "std"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
dashmap = "6.2.1"
schemars = "1.2.1"
# Pinned to 0.13.0 to match the CLI — `cargo add` resolves to
# 0.14.0 which transitively requires libsqlite3-sys >=0.30
# (incompatible with rusqlite 0.31's pin at 0.28 under cargo's
# `links = "sqlite3"` single-version constraint). Bump in lockstep
# with the CLI's starlark when both can move past sqlite 0.28.
starlark = "0.13.0"
# Only the `cli` feature — gives us the type definitions for
# `Stage` (FullInlineFunction*, Strategy). The default
# features pull executor / http / env / viewer / mcp which the
# SDK doesn't need (the CLI binary keeps the full set).
objectiveai-sdk = { version = "2.1.1", default-features = false, features = ["cli"] }

# Chromium encrypts cookie values via AES-GCM with a key wrapped
# in Windows DPAPI. CryptUnprotectData lives in
# Win32_Security_Cryptography. Cross-platform decrypt support
# (macOS Keychain, Linux libsecret) will land under their own
# cfg branches when needed.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
] }
