[package]
name = "psychological-operations-x-api"
version = "0.99.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
thiserror = "2.0.18"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.52.1", features = ["full"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2.1.3"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
psychological-operations-browser-sdk = { path = "../psychological-operations-browser-sdk" }
