[package]
name = "psychological-operations-x-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
base64 = "0.22.1"
chrono = "0.4"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
http = "1.4.1"
humantime = "2"
objectiveai-sdk = { version = "2.2.8", default-features = false, features = ["cli", "cli-executor"] }
psychological-operations-db = { path = "../psychological-operations-db" }
psychological-operations-sdk = { path = "../psychological-operations-sdk" }
reqwest = "0.13.2"
rmcp = { version = "0.16.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
