[package]
name = "psychological-operations-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "psychological_operations_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
psychological-operations-browser-sdk = { path = "../../psychological-operations-browser-sdk", version = "0.1.0" }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.4"
base64 = "0.22.1"
notify = "8.2.0"
tokio = { version = "1.52.3", features = ["sync", "macros", "time", "rt"] }

