[package]
name = "psychological-operations-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "psychological_operations_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
psychological-operations-browser-sdk = { path = "../../psychological-operations-browser-sdk", version = "0.1.0" }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = ["unstable"] }
tauri-plugin-opener = "2.5.4"
base64 = "0.22.1"
notify = "8.2.0"
scraper = "0.20"
tokio = { version = "1.52.3", features = ["sync", "macros", "time", "rt"] }
raw-window-handle = "0.6"

# CEF (Chromium Embedded Framework) backend for the content webview.
# `default-features = false` drops `sandbox` (which requires the
# bootstrap.exe / cdylib build pattern on Windows) and `build-util`
# (the bundle-cef-app tool, not needed at runtime). First build
# downloads ~150 MB of CEF binaries into `target/`; set `CEF_PATH`
# to a persistent dir (e.g. `$env:USERPROFILE/.local/share/cef`) to
# avoid re-downloading on `cargo clean`.
cef = { version = "148.2.0", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
# Match cef-rs's windows-sys version so HWND types are the same
# concrete type at the call site.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# CEF on macOS needs Cocoa setup (NSApplication + AppDelegate) and
# the CEF framework must be loaded dynamically via the library_loader
# before any CEF function is called. We also need to find the
# parent NSView from the Tauri window via raw-window-handle.
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSApplication",
    "NSResponder",
    "NSView",
    "NSWindow",
] }

