[package]
name = "psychological-operations-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "psychological_operations_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Separate helper binary for CEF subprocesses on macOS. See
# `src/bin/helper.rs` for why this exists. The bundle layout is
# produced by `cef`'s `bundle-cef-app` tool (enabled via the
# `cef` `build-util` feature on macOS — see below).
[[bin]]
name = "psychological_operations_browser_helper"
path = "src/bin/helper.rs"

# Metadata `cef`'s bundle-cef-app reads. Names the helper .app
# bundle and the resources dir packaged alongside.
[package.metadata.cef.bundle]
helper_name = "psychological_operations_browser_helper"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
psychological-operations-browser-sdk = { path = "../../psychological-operations-browser-sdk", version = "0.1.0" }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = ["unstable"] }
tauri-plugin-opener = "2.5.4"
base64 = "0.22.1"
scraper = "0.20"
tokio = { version = "1.52.3", features = ["sync", "macros", "time", "rt"] }
raw-window-handle = "0.6"

# CEF (Chromium Embedded Framework) backend for the content webview.
# `default-features = false` drops `sandbox` (which requires the
# bootstrap.exe / cdylib build pattern on Windows) and `build-util`
# (the bundle-cef-app tool, not needed at runtime). First build
# downloads ~150 MB of CEF binaries into `target/`; set `CEF_PATH`
# to a persistent dir (e.g. `$env:USERPROFILE/.local/share/cef`) to
# avoid re-downloading on `cargo clean`.
cef = { version = "148.2.0", default-features = false }
# Direct dep so cargo propagates `DEP_CEF_DLL_WRAPPER_CEF_DIR`
# (the `links = "cef_dll_wrapper"` metadata) into our build.rs.
# We don't use cef-dll-sys types directly — they're all re-
# exported via `cef::sys` — but cargo only sets DEP_ env vars
# for direct consumers of the `links`-emitting crate.
cef-dll-sys = { version = "148.2.0", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
# Match cef-rs's windows-sys version so HWND types are the same
# concrete type at the call site.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# CEF on macOS needs Cocoa setup (NSApplication + AppDelegate) and
# the CEF framework must be loaded dynamically via the library_loader
# before any CEF function is called. We also need to find the
# parent NSView from the Tauri window via raw-window-handle, and
# call NSView::setFrame for reflow.
objc2 = "0.6"
# NSRect / NSPoint / NSSize live under `NSGeometry`.
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSApplication",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
# Enable cef's `build-util` feature so `cargo build --bin bundle-cef-app`
# is available for our CI/build pipeline. (The bundle step is
# invoked from scripts/build-macos.sh — see that file.)
cef = { version = "148.2.0", default-features = false, features = ["build-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
# CEF on Linux uses X11 — XMoveResizeWindow for child-surface
# reflow. `x11-dl` loads libX11 dynamically; we pair it with the
# shared display CEF already owns via `cef::get_xdisplay()` so we
# don't open a second connection.
x11-dl = "2"

